fixed login button spacing

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -47,6 +47,7 @@ body{
    width: 100%;
 }
 .container{
+    max-width: 1400px;
     transition: ease-in .4s;
     height: max-content;
     width: 100%;
