--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,12 +1,17 @@
-.container{
+.container-form{
  height: max-content;
- max-width: 1400px;
+ max-width: 700px;
  width: 100%;
  margin-inline: auto;
  padding-top: 20px;
+ min-height: 90vh;
 }
 .form-group{
-   
-   max-width: 90%;
+   max-width: 700px;
+   width: 90%;
    margin-inline: auto;
+}
+.container-form button{
+ margin: 1rem;
+ margin-left: 1.5rem;
 }
